syntax = "proto3";

package incremental;

service versionIncremental {
    rpc Generate(GenerateRequest) returns (GenerateResponse) {}
    rpc Update(UpdateRequest) returns (UpdateResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GenerateRequest {
    //TODO: user unique ID or UUID
    string projectName = 1;
}

message GenerateResponse {
    uint64 version = 1;
}

message DeleteRequest {
    //TODO: user unique ID or UUID
    string projectName = 1;
}

message DeleteResponse {
    uint32 status = 1;
}

message UpdateRequest {
    //TODO: user unique ID or UUID
    string projectName = 1;
    uint64 version = 2;
}

message UpdateResponse {
    uint32 status = 1;
}
